--- a/static/css/base.css
+++ b/static/css/base.css
@@ -227,6 +227,14 @@ body {
 }
 
 
+.link_hover:hover {
+    background-color: #198754;
+    color: white;
+    border: black;
+    border-style: solid;
+    font-size: 2rem;
+}
+
 /* --------------------------------- Media queries */
 
 /* Slightly larger container on xl screens */
