--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -20,11 +20,11 @@
             <p class="text-muted">Please fill out the form below to contact us. All information is private and will not be shared with anyone.</p>
             <form class="form update-form" method="POST" action="{% url 'contact_form_post' %}">{% csrf_token %}
                 <div class="mb-3">
-                    <label for="fullName" class="form-label" required>Full Name</label>
+                    <label for="fullName" class="form-label" required></label>
                     <input type="name" class="form-control" id="fullName" placeholder="Full name" name="full_name" required>
                   </div>
                 <div class="mb-3">
-                  <label for="email" class="form-label">Email Address</label>
+                  <label for="email" class="form-label"></label>
                   <input type="email" class="form-control" id="email" placeholder="Email Address" name="email"  required>
                 </div>
                 <div class="mb-3">
@@ -33,7 +33,8 @@
                         <textarea class="form-control" name="message" required></textarea>
                     </div>
                 </div>
-            <button class="btn btn-success" style="margin: 1px; background-color: Green;">Submit Form</button>    
+            <button class="btn btn-success form_post_btn">Submit Form</button>    
+            <button class="btn btn-success form_reset_btn">Reset</button>  
             </form>
         </div>
     </div>
