--- a/static/css/base.css
+++ b/static/css/base.css
@@ -191,7 +191,7 @@ body {
     padding-bottom: 5px;
 }
 
-
+/*
 .form_post_btn {
     margin: 1px; 
     background-color: Green;
@@ -205,6 +205,7 @@ body {
     width: 120px;
     border-color: red;
 }
+*/
 
 .qty_increase {
     background-color: green;
