--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -29,8 +29,8 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="" type="submit">Update Product</button>
+                        <a class="btn btn-danger" href="{% url 'products' %}">Cancel</a>
+                        <button class="btn btn-success" type="submit">Update Product</button>
                     </div>
                 </form>
             </div>            
