--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -64,10 +64,10 @@
                         </small>
                         {% endif %}
                             <div class="col-12">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                <a href="{% url 'products' %}" class="btn btn-outline-black mt-5">
                                     <span class="text-uppercase btn btn-primary">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-success rounded-0 text-uppercase mt-5" value="Add to Cart">
+                                <input type="submit" class="btn btn-success text-uppercase mt-5" value="Add to Cart">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
