Text changes within table.

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-12 col-lg-7">
                 <div class="order-confirmation-wrapper p-2 border table_div">
-                    <h3>Order Information</h3>
+                    <h3>Order Information:</h3>
                     <table class="table">
                         <tbody>
                           <tr>
@@ -38,13 +38,8 @@
                     </table>
                 </div>
                 <div class="order-confirmation-wrapper p-2 border table_div">
-                    <h3>Order Summary</h3>
+                    <h3>Order Summary:</h3>
                     <table class="table">
-                    <thead>
-                        <tr>
-                        <th scope="col">Order Details</th>
-                        </tr>
-                    </thead>
                     <tbody>
                         <tr>
                         <th scope="row">
