Added reset form type to contact form.

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
             <button class="btn btn-success form_post_btn">Submit Form</button>    
-            <button class="btn btn-danger form_reset_btn">Reset</button>  
+            <button class="btn btn-danger form_reset_btn" type="reset">Reset</button>  
             </form>
         </div>
     </div>
