--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -85,7 +85,7 @@
                                 <textarea class="form-control" name="review"></textarea>
                             </div>
                         </div>
-                        <button class="btn btn-success" style="margin: 1px; background-color: Green;">Submit Review</button>    
+                        <button class="btn btn-success" style="margin: 1px;">Submit Review</button>    
                     </form>
                 </div>
             </div>
