Validated Javascript with jshint.

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -124,10 +124,10 @@
 {% block postloadjs %}
 {{ block.super }}
 <script type="text/javascript">
-var collapseElementList = [].slice.call(document.querySelectorAll('.collapse'))
+var collapseElementList = [].slice.call(document.querySelectorAll('.collapse'));
 var collapseList = collapseElementList.map(function (collapseEl) {
-  return new bootstrap.Collapse(collapseEl)
-})
+  return new bootstrap.Collapse(collapseEl);
+});
 </script>
 
 {% include 'products/includes/quantity_input_script.html' %}
