--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -19,12 +19,12 @@
 
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="plan-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:#198754">
-                Nutrition Plans
+                Nutrition Books
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="plan-link">
                 <a href="{% url 'products' %}?category=Vegan" class="dropdown-item link_hover">Vegan</a>
                 <a href="{% url 'products' %}?category=Vegetarian" class="dropdown-item link_hover">Vegetarian</a>
-                <a href="{% url 'products' %}?category=Vegan,Vegetarian" class="dropdown-item link_hover">All Plans</a>
+                <a href="{% url 'products' %}?category=Vegan,Vegetarian" class="dropdown-item link_hover">All Books</a>
             </div>
         </li>
 
