--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -105,7 +105,7 @@
                 <p class="lead mb-5">Your cart is empty.</p>
                 
                 <div>
-                    <img src="https://pngimg.com/uploads/shopping_cart/shopping_cart_PNG72.png" class="img-fluid" alt="Responsive image" style="width: 100% \9; ">
+                    <img src="https://pngimg.com/uploads/shopping_cart/shopping_cart_PNG72.png" class="img-fluid" alt="Responsive image" style="width: 1000px; ">
                 </div>
                 <a href="{% url 'products' %} " class="btn btn-success" style="margin: 1px; background-color: blue;" title="Course Provider">Keep Shopping</a>
             {% endif %}
