--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -20,12 +20,12 @@
             <p class="text-muted">Please fill out the form below to contact us. All information is private and will not be shared with anyone.</p>
             <form class="form update-form" method="POST" action="{% url 'contact_form_post' %}">{% csrf_token %}
                 <div class="mb-3">
-                    <label for="fullName" class="form-label" required></label>
-                    <input type="name" class="form-control" id="fullName" placeholder="Full name" name="full_name" required>
+                    <label for="fullName" class="form-label">Full Name</label>
+                    <input type="name" class="form-control" id="fullName" name="full_name" required>
                   </div>
                 <div class="mb-3">
-                  <label for="email" class="form-label"></label>
-                  <input type="email" class="form-control" id="email" placeholder="Email Address" name="email"  required>
+                  <label for="email" class="form-label">Email Address</label>
+                  <input type="email" class="form-control" id="email" name="email"  required>
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
