--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -25,7 +25,7 @@
       <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
               <div><i class="fas fa-user fa-lg" style="color:#198754"></i></div>
-              <p class="my-0" style="color:#198754">My Account</p>
+              <p class="my-0" style="color:#198754">My Account - {{ request.user }}</p>
           </div>
       </a>
       <div class="dropdown-menu border-0" aria-labelledby="user-options">
