Accidently added total cost to delivery fee instead of fee.

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -153,7 +153,7 @@
                                 {% if order.order_total > 50 %}
                                 Free on orders above £50
                                 {% else %}
-                                £{{ order.order_total }}
+                                £{{ order.delivery_cost }}
                                 {% endif %}
                             </td>
                         </tr>
