Updated links on home page to point to aws s3.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-              <img class="rounded-lg-3" src="static/assets/images/site_images/pexels-nathan-cowley-1153369.jpg" alt="" width="720">
+              <img class="rounded-lg-3" src="https://the-veggie-guy-fitness.s3.eu-west-2.amazonaws.com/media/pexels-nathan-cowley-1153369.jpg" alt="" width="720">
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-              <img class="rounded-lg-3" src="static/assets/images/site_images/pexels-madison-inouye-2180092.jpg" alt="" width="720">
+              <img class="rounded-lg-3" src="https://the-veggie-guy-fitness.s3.eu-west-2.amazonaws.com/media/pexels-madison-inouye-2180092.jpg" alt="" width="720">
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-              <img class="rounded-lg-3" src="static/assets/images/site_images/pexels-karolina-grabowska-4397841.jpg" alt="" width="720">
+              <img class="rounded-lg-3" src="https://the-veggie-guy-fitness.s3.eu-west-2.amazonaws.com/media/pexels-karolina-grabowska-4397841.jpg" alt="" width="720">
           </div>
         </div>
       </div>
